err/pisa.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ho'...
Listing './lib/python3.5/site-packages/ho/pisa'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pisa-3.0.33.egg-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sx'...
Listing './lib/python3.5/site-packages/sx/pisa3'...
Compiling './lib/python3.5/site-packages/sx/pisa3/__init__.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/__init__.py", line 43
    raise ImportError, "Reportlab Toolkit Version 2.2 or higher needed"
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa.py", line 126
    print USAGE
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa_context.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa_context.py", line 171
    if not bold and fweight <> "normal":
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa_paragraph.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa_paragraph.py", line 264
    print "***", x, frag["x"]
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa_paragraph2.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa_paragraph2.py", line 213
    print repr(self)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa_parser.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa_parser.py", line 130
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa_reportlab.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa_reportlab.py", line 195
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa_util.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa_util.py", line 171
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/pisa3/pisa_wsgi.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/pisa_wsgi.py", line 61
    print headers
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sx/pisa3/reportlab_paragraph.py'...
***   File "./lib/python3.5/site-packages/sx/pisa3/reportlab_paragraph.py", line 912
    print id(self), "wrap"
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sx/w3c'...
Compiling './lib/python3.5/site-packages/sx/w3c/cssDOMElementInterface.py'...
***   File "./lib/python3.5/site-packages/sx/w3c/cssDOMElementInterface.py", line 69
    def matchesNode(self, (namespace, tagName)):
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/w3c/cssParser.py'...
***   File "./lib/python3.5/site-packages/sx/w3c/cssParser.py", line 359
    except self.ParseError, err:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sx/w3c/cssSpecial.py'...
***   File "./lib/python3.5/site-packages/sx/w3c/cssSpecial.py", line 245
    print "~", part, parts, oparts, declarations
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
